--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,6 +11,10 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    
 
     <application
         android:allowBackup="true"
@@ -20,7 +24,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,8 +39,14 @@
 
         <activity
             android:name=".AlertActivity"
-            android:label="@string/title_activity_alert" 
-            android:hardwareAccelerated="false" >
+            android:hardwareAccelerated="false"
+            android:label="Intrusion Alert"
+            android:screenOrientation="sensorPortrait"
+            android:showOnLockScreen="true" >
+        </activity>
+        <activity
+            android:name=".StartActivity"
+            android:label="@string/title_activity_start" >
         </activity>
     </application>
 
